# project-rex

./: .gitignore  Cargo.toml  renovate.json
.github/workflows/: build-pages.yaml  build.yaml
common/: Cargo.toml
database/: Cargo.toml  generate-orm.sh
database/migration/: Cargo.toml
database/migration/resources/: m001_down.sql  m001_up.sql
database/migration/src/: lib.rs  m001_create_table.rs
database/src/: lib.rs
database/src/orm/: account.rs  asset.rs  attachment.rs  channel.rs  channel_member.rs  comment.rs  guild.rs  guilded_channel.rs  login_attempt.rs  message.rs  mod.rs  node.rs  post.rs  prelude.rs  profile.rs  publication.rs  reaction.rs  sea_orm_active_enums.rs  user_publication_reaction_interaction.rs  user_publications_preference_interaction.rs  user_publications_preferences.rs
database/src/test/: migration.rs  mod.rs
docs/: Erste_Ideen.txt  book.adoc  pagessystem-wide-requirements.adoc
docs/Activity_Charts/Commercial/Upload Add/: Upload_Add.jam
docs/Activity_Charts/Log-In/: Log-In.jam
docs/Project Management/10.08.2023/: TODO.txt
docs/_include/Activity_Charts/Commercial/: Commercial_Activity_Chart.jam
docs/_include/Activity_Charts/Create-Account/: Create-Account_Activity_Diagram.jam
docs/_include/Activity_Charts/Node_Hosting/: Node_Hosting.jam
docs/_include/Datenbank/: Mongo-DB_Schema.jam
docs/_include/Node/: Node-Network.jam
docs/pages/: architecture.adoc  glossary.adoc  requirements.adoc  vision.adoc
gateway/: Cargo.toml
pages/: docusaurus.config.js  package.json
pages/docs/: contribute.md
(+4 files in other folders)
